Fix Alignment and routing issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -79,7 +79,7 @@ p{
 
 .img-large{
 	width: 100%;
-	height: auto;
+	height:   310px;
 }
 
 
